# egui-detail-view

./: Cargo.toml
src/: lib.rs  main.rs  render.rs
