[package]
name = "egui-detail-view"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.26.2"
egui = "0.26.2"
egui_extras = "0.26.2"

[patch.crates-io]
egui = { git = "https://github.com/quinntyx/egui" }
egui_glow = { git = "https://github.com/quinntyx/egui" }
egui-winit = { git = "https://github.com/quinntyx/egui" }